bitcoinj on master, chain download no longer blocks, slow initial load time